--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
   assets: 
       - assets/
       - assets/assets/images/blueball.png
+      - assets/assets/images/redball.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
